--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-multi-lang": "^1.0.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
