testing to deploy react app in heroku

--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-multi-lang": "^1.0.2",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "serve": "^10.1.1",
+    "xpress": "^2.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
