--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@
 # testing
 /coverage
 
-# production
-/build
+
 
 # misc
 .DS_Store
@@ -21,3 +20,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+#.gitignore
+
+src/*
+public/*
+build/static/css/*.map
+build/static/js/*.map
